5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1644_1054.log
== TEST (2019-04-15 07:44:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#Leitura dos valores para x e y
x = float(input("Digite o valor de x: "))
y = float(input("Digite o valor de y: "))

#Determinacao do ponto no plano
z = (2 * x) + y
if (z = 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a rea")
-- ERROR:
File "XXXX", line 11
    if (z = 3):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 07:44:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#Leitura dos valores para x e y
x = float(input("Digite o valor de x: "))
y = float(input("Digite o valor de y: "))

#Determinacao do ponto no plano
z = (2 * x) + y
if (z == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a rea")
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:44:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#Leitura dos valores para x e y
x = float(input("Digite o valor de x: "))
y = float(input("Digite o valor de y: "))

#Determinacao do ponto no plano
z = (2 * x) + y
if (z == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a rea")
-- EXECUTION TIME:
0.124093
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a rea
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 07:45:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#Leitura dos valores para x e y
x = float(input("Digite o valor de x: "))
y = float(input("Digite o valor de y: "))

#Determinacao do ponto no plano
z = (2 * x) + y
if (z == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- EXECUTION TIME:
0.207376
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
